k8s/ms_commande.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql2
  namespace: micro-services
spec:
  serviceName: mysql2
  replicas: 2
  selector:
    matchLabels:
      app: mysql2
  template:
    metadata:
      labels:
        app: mysql2
    spec:
      containers:
        - name: mysql2
          image: mysql:9.2
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: sql-scripts2
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: sql-scripts2
          configMap:
            name: mysql-init-scripts2
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql2
  namespace: micro-services
spec:
  selector:
    app: mysql2
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-commande
  namespace: micro-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-commande
  template:
    metadata:
      labels:
        app: ms-commande
    spec:
      containers:
        - name: commande
          image: idriss5234/ms_commande:latest
          ports:
            - containerPort: 8092
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: ms-commande
  namespace: micro-services
spec:
  selector:
    app: ms-commande
  ports:
    - protocol: TCP
      port: 8092
      targetPort: 8092
  type: NodePort
