k8s/ms_panier.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql3
  namespace: micro-services
spec:
  serviceName: mysql3
  replicas: 2
  selector:
    matchLabels:
      app: mysql3
  template:
    metadata:
      labels:
        app: mysql3
    spec:
      containers:
        - name: mysql3
          image: mysql:9
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql3
  namespace: micro-services
spec:
  selector:
    app: mysql3
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-panier
  namespace: micro-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-panier
  template:
    metadata:
      labels:
        app: ms-panier
    spec:
      containers:
        - name: panier
          image: idriss5234/ms_panier:latest
          ports:
            - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: ms-panier
  namespace: micro-services
spec:
  selector:
    app: ms-panier
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
  type: NodePort
