k8s/ms_utilsateur.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql1
  namespace: micro-services
spec:
  serviceName: mysql1
  replicas: 2
  selector:
    matchLabels:
      app: mysql1
  template:
    metadata:
      labels:
        app: mysql1
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: sql-scripts
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: sql-scripts
          configMap:
            name: mysql-init-scripts
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql1
  namespace: micro-services
spec:
  selector:
    app: mysql1
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-utilisateur
  namespace: micro-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-utilisateur
  template:
    metadata:
      labels:
        app: ms-utilisateur
    spec:
      containers:
        - name: utilisateur
          image: idriss5234/ms_utilisateur:latest
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: ms-utilisateur
  namespace: micro-services
spec:
  selector:
    app: ms-utilisateur
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
  type: NodePort
